# libtrx

./: .pre-commit-config.yaml  README.md  justfile  meson.build  meson.options
.github/: CODEOWNERS
include/libtrx/: arg_parser.h  benchmark.h  bson.h  enum_str.h  filesystem.h  json.h  strings.h  vector.h  virtual_file.h
include/libtrx/config/: common.h  config.h  config_file.h  config_map.h  config_option.h  file.h  map.h
include/libtrx/engine/: audio.h  image.h
include/libtrx/game/: collision.h  const.h  creature.h  game.h  game_string.def  items.h  math.h  objects.h  sound.h
include/libtrx/game/console/: common.h
include/libtrx/game/console/cmd/: config.h
include/libtrx/game/console/commands/: config.h
include/libtrx/game/effects/: types.h
include/libtrx/game/gameflow/: common.h  types.h
include/libtrx/game/items/: common.h  enum.h  types.h
include/libtrx/game/lara/: cheat.h  common.h  enum.h  enum_tr1.h  misc.h  types.h
include/libtrx/game/objects/: common.h  ids.h  names.h  types.h  vars.h
include/libtrx/game/rooms/: common.h  types.h
include/libtrx/game/sound/: common.h  ids.h
include/libtrx/game/ui/: common.h  events.h
include/libtrx/game/ui/widgets/: label.h  prompt.h  stack.h
include/libtrx/gfx/: common.h  context.h  renderer.h
include/libtrx/gfx/2d/: 2d_renderer.h  2d_surface.h
include/libtrx/gfx/3d/: 3d_renderer.h  vertex_stream.h
include/libtrx/gfx/gl/: buffer.h  program.h  sampler.h  texture.h  utils.h  vertex_array.h
include/libtrx/gfx/renderers/: fbo_renderer.h  legacy_renderer.h
src/: arg_parser.c  benchmark.c  enum_str.c  filesystem.c  log_linux.c  log_windows.c  memory.c  strings.c  vector.c  virtual_file.c
src/config/: common.c  config_file.c  file.c
src/engine/: audio.c  audio.h  audio_sample.c  audio_stream.c  image.c
src/game/: game_string.c  items.c
src/game/console/: common.c  extern.h
src/game/console/cmd/: config.c  die.c  end_level.c  exit_game.c  exit_to_title.c  fly.c  give_item.c  heal.c  kill.c  play_demo.c  pos.c  set_health.c  sfx.c  teleport.c
src/game/console/commands/: config.c  give_item.c  heal.c  pos.c  set_health.c
src/game/objects/: names.c
src/game/ui/: common.c  events.c
src/game/ui/widgets/: console.c  prompt.c  stack.c
src/gfx/: context.c
src/gfx/2d/: 2d_renderer.c  2d_surface.c
src/gfx/3d/: 3d_renderer.c  vertex_stream.c
src/gfx/gl/: texture.c
src/gfx/renderers/: fbo_renderer.c  legacy_renderer.c
src/json/: bson_parse.c  bson_parse.h  bson_write.c  bson_write.h  json_base.c  json_parse.c  json_parse.h  json_write.c  json_write.h
src/strings/: fuzzy_match.c
tools/: additional_lint  generate_icon  sort_imports
tools/config/TRX_ConfigToolLib/Controls/: AboutWindow.xaml  CategoryControl.xaml  PropertyControl.xaml  TRXConfigWindow.xaml
tools/config/TRX_ConfigToolLib/Models/: MainWindowViewModel.cs
tools/libtrx/: git.py  linting.py  paths.py  versioning.py
tools/libtrx/cli/: additional_lint.py  game_docker_entrypoint.py  release.py  sort_imports.py
